arrombado do carai

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,16 @@
 
 # DATABASE
-MYSQL_DB=leledb # database name
-MYSQL_USER=learodri # database user
-MYSQL_PASSWORD=lele123 # database user password
-MYSQL_ROOT_PASSWORD=root123 # root password
+MYSQL_DB=leledb
+MYSQL_USER=learodri
+MYSQL_PASSWORD=lele123
+MYSQL_ROOT_PASSWORD=root123
 
 # Wordpress
-DOMAIN_NAME=learodri.42.fr # domain name of the website
-WP_ADMIN_N=learodri # admin name
-WP_ADMIN_P=lele123 # admin password
-WP_TITLE=inception # website title
-WP_ADMIN_E=lele@gmail.com # admin email
+DOMAIN_NAME=learodri.42.fr 
+WP_ADMIN_N=learodri 
+WP_ADMIN_P=lele123 
+WP_TITLE=inception
+WP_ADMIN_E=lele@gmail.com
 # WP NEW USER
 
 WP_U_NAME=Armando pinto melo rego # user name of the new user
