--- a/srcs/.env
+++ b/srcs/.env
@@ -13,9 +13,9 @@ WP_TITLE=inception
 WP_ADMIN_E=lele@gmail.com
 # WP NEW USER
 
-WP_U_NAME=Armando pinto melo rego # user name of the new user
-WP_U_PASS=rego123 # user password
-WP_U_EMAIL=rego@gmail.com # user email
+WP_U_NAME=Armando pinto melo rego 
+WP_U_PASS=rego123
+WP_U_EMAIL=regao@gmail.com 
 # WP_U_ROLE=author author, editor, Administrator
 
 
